--- a/src/muban/styles/template.css
+++ b/src/muban/styles/template.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background:red;
+    background:#fff;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -13,3 +13,27 @@ body{
     height:100vh;
     width:100%;
 }
+
+#nav{
+    width:100%;
+    height:50px;
+    border:4px solid indigo;
+    position:fixed;
+    top:0;
+    left:0;
+    transition:75s;
+}
+section{
+    position:absolute;
+    bottom:0;
+    left:0;
+    height:85px;
+    border:4px solid red;
+}
+footer{
+    bordeR:4px solid blue;
+}
+footer,section{
+    width: 100%;
+    padding:0 .5rem
+}   
