--- a/src/muban/tenpureto.ejs
+++ b/src/muban/tenpureto.ejs
@@ -34,6 +34,7 @@
       <h1>Develop with Kyle</h1>
       <h3>subheaer</h3>
     </section>
+    <!-- projects -->
     <section id="work" class="projects">
       <ul class="work-list-container">
         <figure>
