--- a/src/muban/tenpureto.ejs
+++ b/src/muban/tenpureto.ejs
@@ -49,6 +49,43 @@
           <img src="#" alt="undefined" />
           <figcaption>undefined</figcaption>
         </figure>
+        <figure>
+          <img src="#" alt="undefined" />
+          <figcaption>undefined</figcaption>
+        </figure>
+        <figure>
+          <img src="#" alt="undefined" />
+          <figcaption>undefined</figcaption>
+        </figure>
+        <figure>
+          <img src="#" alt="undefined" />
+          <figcaption>undefined</figcaption>
+        </figure>
+        <figure>
+          <img src="#" alt="undefined" />
+          <figcaption>undefined</figcaption>
+        </figure>
+        <figure>
+          <img src="#" alt="undefined" />
+          <figcaption>undefined</figcaption>
+        </figure>
+        <figure>
+          <img src="#" alt="undefined" />
+          <figcaption>undefined</figcaption>
+        </figure>
+        <figure>
+          <img src="#" alt="undefined" />
+          <figcaption>undefined</figcaption>
+        </figure>
+        <figure>
+          <img src="#" alt="undefined" />
+          <figcaption>undefined</figcaption>
+        </figure>
+        <figure>
+          <img src="#" alt="undefined" />
+          <figcaption>undefined</figcaption>
+        </figure>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto deserunt magni corrupti quisquam temporibus, sequi dolorem suscipit numquam officia optio. Iusto saepe, corrupti esse deleniti, dolore similique iste ipsum numquam repellendus pariatur velit dicta nam excepturi veritatis commodi. Blanditiis molestias iusto culpa autem exercitationem est amet at perferendis quibusdam doloribus quia rem corporis optio officiis, assumenda sed placeat maxime? Omnis totam voluptate deserunt neque modi. Delectus perspiciatis consectetur itaque enim, quia recusandae obcaecati temporibus quibusdam, dignissimos, voluptas necessitatibus. Sunt asperiores, vitae nisi blanditiis animi voluptatum porro repellat officiis reiciendis aliquid, dolore alias aspernatur consectetur ad a odit exercitationem ipsa accusantium dolores? Fuga officia eveniet quos animi voluptatem doloremque ullam. Dignissimos voluptate assumenda, optio repellendus quia natus iusto rerum quae libero porro accusantium unde, vel enim quisquam excepturi. Perspiciatis voluptate maiores corporis eius omnis enim dolores reiciendis est saepe ipsum quod possimus explicabo ad vero iusto pariatur sapiente quia minima dolorem, laborum tempora, ratione blanditiis? Non cumque illo, officiis hic a unde veniam ducimus at cum aliquam repellendus dolorum? Necessitatibus ex a delectus esse iste sed illo natus tenetur atque est iure consectetur harum animi facilis incidunt nemo accusamus totam nam odit qui, consequatur possimus at impedit? Nihil necessitatibus numquam incidunt vitae quod laboriosam accusantium eos commodi natus beatae. Quaerat, aspernatur dignissimos? Eaque, quas cupiditate voluptate minus consequatur laborum consequuntur earum reiciendis! Ipsa quasi repellendus molestiae repellat laboriosam eum dolore libero consequatur, molestias debitis voluptatem fuga, architecto maxime quos dolorem earum suscipit? Doloribus inventore aliquam eligendi quas ratione sit pariatur officia.</p>
       </ul>
     </section>
     <footer id="contact">footer</footer>
