--- a/src/muban/styles/template.css
+++ b/src/muban/styles/template.css
@@ -75,16 +75,15 @@ right:-100%;
     border:4px solid rgb(220, 11, 206);
 }
 footer{
-    height:85px;
+    height:150px;
 }
 section{
     border:4px solid red;
 }
 footer{
-    position:fixed;
-    bottom:0;
-    left:0;
+    /* position:absolute; */
     bordeR:4px solid blue;
+    /* bottom:0; */
 }
 footer,section{
     width: 100%;
@@ -92,7 +91,7 @@ footer,section{
 }
 
 #banner{
-    height:250px;
+    height:350px;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -101,6 +100,9 @@ footer,section{
 }
 #work{
     height:100%;
+    overflow:hidden;
+    overflow-y: scroll;
+    padding: 1rem 1rem;
 }
 .hidden-banner{
     opacity:0;
