--- a/src/muban/styles/template.css
+++ b/src/muban/styles/template.css
@@ -6,25 +6,36 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
+.reg-bg{
     background:#fff;
+}
+.modal-bg{
+    background:#e6e6e6;
+}
+.blur-element{
+    filter:blur(3.75px);
+    -webkit-filter: blur(3.75px)
+}
+body{
+    z-index:998;
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
     height:100vh;
     width:100%;
+    transition: .25s;
 }
 
 #nav{
     height:100vh;
     width:300px;
     z-index:998;
+    opacity: .88;
     background:indigo;
     border-top-left-radius: 20px;
     border:4px solid purple;
     position:fixed;
-    top:0;
     transition:.75s;
     display:flex;
     flex-direction: column;
@@ -50,7 +61,6 @@ right:-100%;
     right:0;
 }
 .nav-list-container{
-    border:2px solid #fff;
     width:100%;
     height:inherit;
     display:flex;
@@ -95,13 +105,17 @@ footer,section{
     display:flex;
     flex-direction: column;
     align-items: center;
-    transition:2.5s;
+    transition:.75s;
     justify-content: center;
+}
+.yes-scroll{
+    overflow-y: scroll;
+}
+.no-scroll{
+    overflow-y: hidden;
 }
 #work{
     height:100%;
-    overflow:hidden;
-    overflow-y: scroll;
     padding: 1rem 1rem;
 }
 .hidden-banner{
@@ -117,11 +131,14 @@ footer,section{
     border-radius: 12px;
     background:pink;
     opacity:.6;
+    z-index: 999;
 }
 .hidden-modal{
     display:none;
 }
-
+.no-pointer{
+    pointer-events: none;
+}
 #nav-button{
     position:absolute;
     z-index: 999;
