--- a/src/muban/styles/template.css
+++ b/src/muban/styles/template.css
@@ -13,8 +13,14 @@
     background:#e6e6e6;
 }
 .blur-element{
+    transition: .25s;
     filter:blur(3.75px);
     -webkit-filter: blur(3.75px)
+}
+.blur-element-sm{
+    transition:.25s;
+    filter:blur(1.75px);
+    -webkit-filter: blur(1.75px)
 }
 body{
     z-index:998;
@@ -35,7 +41,6 @@ body{
     background:indigo;
     border:4px solid purple;
     position:fixed;
-    transition:.75s;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -55,8 +60,10 @@ body{
 }
 .hidden-nav{
     right:-100%;
+    transition:.75s;
 }
 .show-nav{
+    transition:.75s;
     right:0;
 }
 .nav-list-container{
