--- a/src/muban/styles/template.css
+++ b/src/muban/styles/template.css
@@ -167,3 +167,35 @@ footer,section{
     border:3px solid #f00;
     border-radius:50%;
 }
+
+/* work section */
+
+figure>a>img{
+    height:175px;
+    width:175px;
+    border-radius:12px;
+    box-shadow: 0 .075rem 10px .5px #333;
+}
+figcaption{
+    text-align: start;
+    width:100%;
+}
+.tile-sep{
+    height:125px;
+    width:2px;
+    background:#333;
+    border:.75px solid rgb(92, 92, 92)(255, 255, 255);
+    border-radius: 12px;
+}
+
+.email-template-container{
+    height:100%;
+    margin-top:1rem;
+    overflow:hidden;
+    display: flex;
+    align-items: center;
+    width:100%;
+    overflow-x:scroll;
+    gap:.5rem;
+    padding:1.5rem 0;
+}
