--- a/src/muban/styles/template.css
+++ b/src/muban/styles/template.css
@@ -180,9 +180,24 @@ figcaption{
     text-align: start;
     width:100%;
 }
+.figcaption-module{
+    text-align: end;
+    width:100%;
+}
 .tile-sep{
     height:125px;
     width:2px;
+    background:#333;
+    border:.75px solid rgb(92, 92, 92)(255, 255, 255);
+    border-radius: 12px;
+}
+.mod-cat{
+    height:100px;
+    width:100px;
+}
+.tile-sep-col{
+    height:.75px;
+    width:66%;
     background:#333;
     border:.75px solid rgb(92, 92, 92)(255, 255, 255);
     border-radius: 12px;
@@ -198,4 +213,24 @@ figcaption{
     overflow-x:scroll;
     gap:.5rem;
     padding:1.5rem 0;
+}
+.modules-container{
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height:100%;
+    gap:.5rem;
+    overflow:hidden;
+    padding:1.5rem 0;
+}
+
+.row-arc{
+    display:flex;
+    width:100%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
 }
