--- a/src/muban/styles/template.css
+++ b/src/muban/styles/template.css
@@ -156,6 +156,27 @@ footer,section{
 .no-pointer{
     pointer-events: none;
 }
+.end-point-container{
+    width:100%;
+    height:100%;
+    display:Flex;
+    align-items: center;
+    justify-content: center;        
+}
+.t1,.t2{
+    width:100%;
+    height:250px;
+}
+.t1{
+    transform:translate(-10px);
+    border-left:.5rem solid orange;
+    border-top:.5rem solid orange;
+}
+.t2{
+    transform:translate(10px);
+    border-right:.5rem solid orange;
+    border-bottom:.5rem solid orange;
+}
 #nav-button{
     position:absolute;
     z-index: 999;
