--- a/src/muban/styles/template.css
+++ b/src/muban/styles/template.css
@@ -168,7 +168,7 @@ section {
 .right-to-left {
   opacity: 0;
   right: 0;
-  animation: rtl .5s forwards;
+  animation: rtl 0.5s forwards;
 }
 @keyframes rtl {
   from {
@@ -176,15 +176,15 @@ section {
   }
   to {
     right: 100px;
-    opacity:1;
+    opacity: 1;
   }
 }
-.temp-opacity{
-    opacity:0;
+.temp-opacity {
+  opacity: 0;
 }
 .left-to-right {
   opacity: 0;
-  animation: ltr .5s forwards;
+  animation: ltr 0.5s forwards;
 }
 
 @keyframes ltr {
@@ -193,8 +193,66 @@ section {
   }
   to {
     left: 100px;
-    opacity:1;
+    opacity: 1;
   }
+}
+.hide-dbds {
+  opacity: 0;
+}
+#dbds-container {
+  border: 3px solid purple;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2.5rem;
+  overflow:hidden;
+}
+.dbds-figure > div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dbds-figure {
+  transition: 0.5s;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border:4px solid cyan;
+}
+.row{
+    flex-direction: row;
+    }
+    .row-rev{
+    flex-direction: row-reverse;
+    }
+.dbds-hr {
+  width: 100%;
+  height: 5px;
+  background: red;
+  position: fixed;
+}
+.dbds-img {
+  height: 150px;
+  width: 150px;
+  border-radius: 12px;
+  margin-top:0rem;
+}
+.img-trans{
+    transition: .5s;
+    transform:translate(0,25px);
+}
+.img-trans-def{
+    transition: .5s;
+    transform:translate(0,0);
 }
 
 .end-point-container {
@@ -204,6 +262,7 @@ section {
   align-items: center;
   justify-content: center;
   position: relative;
+  transition: .5s;
 }
 
 .fc1 {
@@ -267,7 +326,9 @@ section {
 }
 
 /* work section */
-
+.work-section{
+    margin-bottom:5.25rem;
+}
 figure > a > img {
   height: 175px;
   width: 175px;
@@ -301,7 +362,8 @@ figcaption {
   border-radius: 12px;
 }
 
-.email-template-container {
+.email-template-container,
+.lock-down-container {
   height: 100%;
   margin-top: 1rem;
   overflow: hidden;
