fix: scroll - all work sections fade in and out

--- a/src/muban/styles/template.css
+++ b/src/muban/styles/template.css
@@ -328,6 +328,7 @@ section {
 /* work section */
 .work-section{
     margin-bottom:5.25rem;
+    transition:.5s;
 }
 figure > a > img {
   height: 175px;
