--- a/src/muban/styles/template.css
+++ b/src/muban/styles/template.css
@@ -37,7 +37,7 @@ body {
   height: 100%;
   width: 300px;
   z-index: 999;
-  opacity: 0.88;
+  opacity: 0.98;
   background: indigo;
   border: 4px solid purple;
   position: fixed;
@@ -198,7 +198,10 @@ section {
 }
 .hide-dbds {
   opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
+
 #dbds-container {
   border: 3px solid purple;
   position: relative;
@@ -211,14 +214,21 @@ section {
   gap: 2.5rem;
   overflow:hidden;
 }
-.dbds-figure > div {
+.dbds-figure > div{
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
+.dbds-article{
+    border:3px solid green;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .dbds-figure {
   transition: 0.5s;
   width: 100%;
@@ -244,7 +254,6 @@ section {
   height: 150px;
   width: 150px;
   border-radius: 12px;
-  margin-top:0rem;
 }
 .img-trans{
     transition: .5s;
@@ -331,8 +340,8 @@ section {
     transition:.5s;
 }
 figure > a > img {
-  height: 175px;
-  width: 175px;
+  height: 225px;
+  width: 225px;
   border-radius: 12px;
   box-shadow: 0 0.075rem 10px 0.5px #333;
 }
