--- a/src/muban/styles/template.css
+++ b/src/muban/styles/template.css
@@ -7,7 +7,7 @@
 }
 
 .reg-bg {  
-  background: rgba(98, 149, 188, 0.415);
+  background: rgba(10, 33, 51, 0.622);
 }
 .modal-bg {
   background: #e6e6e6;
@@ -94,13 +94,18 @@ body {
 }
 footer {
   height: 150px;
+  display: flex;
+  position:relative;
+  flex-direction: column;
+  align-items: center;
+  transition: 0.75s;
+  justify-content: center;
+  overflow:hidden;
+  width:100%;
+  box-shadow: 0 -.5rem 12px .6px #0000008b;
+
 }
 
-footer {
-  /* position:absolute; */
-  border: 4px solid blue;
-  /* bottom:0; */
-}
 .star{
   z-index:998;
   top: 5px;
@@ -132,7 +137,7 @@ section {
   padding: 0 0.5rem;
 }
 /* banner */
-#space-img{
+.space-img{
 position: absolute;
 transform: rotate(180deg);
 opacity: .955;
@@ -172,7 +177,7 @@ opacity: .955;
 }
 #work {
   height: 100%;
-  padding: 1rem 1rem;
+  padding: .75rem;
 }
 .hidden-banner {
   opacity: 0;
@@ -202,6 +207,7 @@ opacity: .955;
 .end-point-img {
   height: 200px;
   width: 200px;
+  border-radius: 12px;
 }
 .right-to-left {
   opacity: 0;
@@ -241,7 +247,7 @@ opacity: .955;
 }
 
 #dbds-container {
-  border: 3px solid purple;
+  /* border: 3px solid purple; */
   position: relative;
   height: 100%;
   width: 100%;
@@ -260,7 +266,7 @@ opacity: .955;
   justify-content: center;
 }
 .dbds-article{
-    border:3px solid green;
+    /* border:3px solid green; */
     width: 100%;
     height: 100%;
     display: flex;
@@ -274,7 +280,7 @@ opacity: .955;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border:4px solid cyan;
+  /* border:4px solid cyan; */
 }
 .row{
     flex-direction: row;
@@ -284,9 +290,10 @@ opacity: .955;
     }
 .dbds-hr {
   width: 100%;
-  height: 5px;
-  background: red;
+  height: 0px;
+  background: none;
   position: fixed;
+  opacity:0;
 }
 .dbds-img {
   height: 150px;
@@ -326,7 +333,7 @@ opacity: .955;
 }
 .fingers-container {
   position: absolute;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   width: 100%;
   padding: 0 1rem;
   display: flex;
@@ -338,7 +345,7 @@ opacity: .955;
   font-size: 30px;
   cursor: pointer;
   z-index: 999;
-  border: 4px double lime;
+  /* border: 4px double lime; */
 }
 .fa-regular:active {
   color: silver;
@@ -350,7 +357,7 @@ opacity: .955;
   width: 100%;
   height: 250px;
 }
-.t1 {
+/* .t1 {
   transform: translate(-10px);
   border-left: 0.5rem solid orange;
   border-top: 0.5rem solid orange;
@@ -359,7 +366,7 @@ opacity: .955;
   transform: translate(10px);
   border-right: 0.5rem solid orange;
   border-bottom: 0.5rem solid orange;
-}
+} */
 #nav-button {
   position: absolute;
   z-index: 999;
@@ -369,12 +376,18 @@ opacity: .955;
   width: 50px;
   background: transparent;
   border-radius: 50%;
+  color:rgb(246, 246, 145);
 }
 
 /* work section */
 .work-section{
-    margin-bottom:5.25rem;
+    margin-bottom:3.5rem;
     transition:.5s;
+    /* background:#fa9b78c2; */
+}
+.w-container{
+  padding:1rem;
+  border-radius:12px;
 }
 figure > a > img {
   height: 225px;
@@ -398,8 +411,8 @@ figcaption {
   border-radius: 12px;
 }
 .mod-cat {
-  height: 100px;
-  width: 100px;
+  height: 150px;
+  width: 150px;
 }
 .tile-sep-col {
   height: 0.75px;
@@ -412,7 +425,6 @@ figcaption {
 .email-template-container,
 .lock-down-container {
   height: 100%;
-  margin-top: 1rem;
   overflow: hidden;
   display: flex;
   align-items: center;
