--- a/src/muban/styles/template.css
+++ b/src/muban/styles/template.css
@@ -2,10 +2,26 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
   list-style: none;
   font-family: Arial, Helvetica, sans-serif;
 }
-
+figure>a>h1.et-h1{
+  text-align: center;
+  height: 200px;
+  width: 200px;
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0.075rem 10px 0.5px #0000008b;
+  border-radius: 12px;
+  font-size:28px;
+  color:#fff;
+  text-shadow: 1px 1px black;
+  background:#333;
+  cursor:pointer;
+}
 .reg-bg {  
   background: rgba(85, 115, 136, 0.745);
 }
@@ -398,8 +414,8 @@ opacity: .955;
   border-radius:12px;
 }
 figure > a > img {
-  height: 225px;
-  width: 225px;
+  height: 200px;
+  width: 200px;
   border-radius: 12px;
   box-shadow: 0 0.075rem 10px 0.5px #0000008b;
 }
@@ -439,7 +455,7 @@ figcaption {
   width: 100%;
   overflow-x: scroll;
   gap: 0.5rem;
-  padding: 1.5rem 0;
+  padding: 1.5rem 1rem;
 }
 .modules-container {
   display: flex;
