--- a/src/muban/styles/template.css
+++ b/src/muban/styles/template.css
@@ -50,7 +50,7 @@ figure>a{
   display:grid;
   width:50%;
   height:50%;
-  border:3px solid green;
+  border:3px solid rgb(243, 238, 92);
   grid-template-columns: 1fr 1fr;
   gap:.25rem;
   justify-content: center;
@@ -64,9 +64,9 @@ figure>a{
 .snake-bod{
   height:25px;
   width:25px;
-  background:#000;
+  background:#0f0;
   flex-wrap: wrap;
-  border:3px solid yellow;
+  border:3px solid rgb(0, 0, 0);
 }
 #calculator-container,
 #notepad-container,
@@ -123,6 +123,13 @@ border:2px solid green;
   width:100%;
   height:2px;
   color:#fff;
+}
+.dbds-hr{
+  position: absolute;
+  height:2px;
+  width:100%;
+  background:transparent;
+  opacity: 0;
 }
   #notepad-container>.notepad-textarea{
     width:90%;
